--- a/twtcinema/src/pages/Detail/Detail.module.scss
+++ b/twtcinema/src/pages/Detail/Detail.module.scss
@@ -1,5 +1,31 @@
 .wrapper {
     margin-left: 15px;
+    height: 100%;
+}
+
+.wrapiconload {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    position: relative;
+}
+.iconLoading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-100%, -50%);
+    font-size: 5rem;
+    color: rgba(22, 24, 35, 0.5);
+    animation: spinner 0.8s linear infinite;
+}
+
+@keyframes spinner {
+    from {
+        transform: translate(-100%, -50%) rotate(0);
+    }
+    to {
+        transform: translate(-100%, -50%) rotate(360deg);
+    }
 }
 
 .backgroudImg {
@@ -55,6 +81,27 @@
         }
         @media (max-width: 500px) {
             left: 37%;
+        }
+    }
+}
+
+@media (max-width: 740px) {
+    .iconLoading {
+        position: absolute;
+        top: 50%;
+        left: 50vw;
+        transform: translate(-50%, -50%);
+        font-size: 5rem;
+        color: rgba(22, 24, 35, 0.5);
+        animation: spinner1 0.8s linear infinite;
+    }
+
+    @keyframes spinner1 {
+        from {
+            transform: translate(-50%, -50%) rotate(0);
+        }
+        to {
+            transform: translate(-50%, -50%) rotate(360deg);
         }
     }
 }
